attached_assets/Pasted-Skip-to-content-Keyboard-Repository-navigation-Code-Iss_1772614787444.txt
Skip to content
Keyboard
Repository navigation
Code
Issues
Actions
Build Android APK
Improve floating widget and typing master UI for better appearance an… #7
Annotations
1 error
build
failed now in 35s
1s
1s
4s
0s
27s
> Task :compressDebugAssets
> Task :parseDebugLocalResources
> Task :checkDebugDuplicateClasses
> Task :mergeLibDexDebug
> Task :mergeDebugJniLibFolders
> Task :mergeDebugNativeLibs NO-SOURCE
> Task :stripDebugDebugSymbols NO-SOURCE
> Task :validateSigningDebug
> Task :writeDebugAppMetadata
> Task :writeDebugSigningConfigVersions
> Task :mergeDebugJavaResource
> Task :desugarDebugFileDependencies
> Task :mergeDebugResources
> Task :processDebugResources

/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/widget/FloatingWidgetService.java:133: error: cannot find symbol
                    TextView text = view.findViewById(R.id.clip_text);
                    ^
  symbol: class TextView
> Task :compileDebugJavaWithJavac
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

> Task :compileDebugJavaWithJavac FAILED
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
> Task :mergeExtDexDebug

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/widget/FloatingWidgetService.java:133: error: cannot find symbol
                      TextView text = view.findViewById(R.id.clip_text);
                      ^
    symbol: class TextView

[Incubating] Problems report is available at: file:///home/runner/work/Keyboard/Keyboard/build/reports/problems/problems-report.html
32 actionable tasks: 32 executed
Configuration cache entry stored.
  Note: Some input files use unchecked or unsafe operations.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 25s
Error: Process completed with exit code 1.
0s
0s
0s
0s
